--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token_mint.spec.ts",
     "test:all": "./scripts/run-all-tests.sh",
     "test:full": "./scripts/run-all-tests.sh",
-    "test:smoke": "./tests/run-tests.sh smoke",
+    "test:smoke": "node scripts/run-smoke-tests.js",
     "test:functional": "./tests/run-tests.sh functional",
     "test:extension": "./tests/run-tests.sh extension",
     "test:comprehensive": "./tests/run-tests.sh all",
     "build": "./scripts/build-no-proxy.sh",
     "clean": "./scripts/run-clean-project.sh",
     "prepare": "husky install",
-    "precommit": "lint-staged && ./scripts/build-no-proxy.sh && npm run test:unit",
+    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-no-proxy.sh && npm run test:smoke",
     "check-versions": "node scripts/check-versions.js",
-    "check-env": "node scripts/initialize-dotenv.js"
+    "check-env": "node scripts/initialize-dotenv.js",
+    "setup:dotenv": "node scripts/initialize-dotenv.js",
+    "setup:test-keys": "node scripts/generate-test-keys.js",
+    "setup:test-env": "./scripts/setup-test-env.sh",
+    "setup:all": "npm run setup:dotenv && npm run setup:test-keys && npm run setup:test-env --build",
+    "dotenv:push": "npx dotenv-vault push",
+    "dotenv:push:test": "npx dotenv-vault push test",
+    "dotenv:pull": "npx dotenv-vault pull",
+    "dotenv:pull:test": "npx dotenv-vault pull test",
+    "verify:signatures": "node scripts/verify-signatures.js",
+    "verify:types": "node scripts/verify-types.js"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
