--- a/package.json
+++ b/package.json
@@ -4,41 +4,60 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check && eslint . --ext .ts",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,ts,json}\"",
-    "test": "./scripts/run-fixed-tests.sh",
-    "test:ci": "./scripts/run-fixed-tests.sh",
-    "test:unit": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/basic.spec.ts",
-    "test:kyc": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/kyc_oracle.spec.ts",
-    "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token_mint.spec.ts",
-    "test:all": "./scripts/run-all-tests.sh",
-    "test:full": "./scripts/run-all-tests.sh",
-    "test:smoke": "node scripts/run-smoke-tests.js",
-    "test:functional": "./tests/run-tests.sh functional",
-    "test:extension": "./tests/run-tests.sh extension",
-    "test:comprehensive": "./tests/run-tests.sh all",
+    "test": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" --timeout 120000",
+    "test:ci": "node scripts/run-ts-tests.js -v smoke",
+    "test:unit": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/kyc-oracle.test.ts --timeout 60000",
+    "test:kyc": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/kyc-oracle.test.ts --timeout 60000",
+    "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-mint.test.ts --timeout 60000",
+    "test:all": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" \"tests/unit/**/*.spec.ts\" --timeout 120000",
+    "test:full": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" \"tests/unit/**/*.spec.ts\" --timeout 120000",
+    "test:smoke": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/smoke.test.ts --timeout 60000",
+    "test:functional": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/functional/**/*.ts\" --timeout 120000",
+    "test:extension": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/extensions/**/*.ts\" --timeout 120000",
+    "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/comprehensive.test.ts --timeout 180000",
+    "test:mint": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-mint.test.ts --timeout 60000",
+    "test:freeze": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/freeze-seize.test.ts --timeout 60000",
+    "test:extensions": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-extensions.test.ts --timeout 60000",
+    "test:ts": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/**/*.ts --timeout 180000",
     "build": "./scripts/build-no-proxy.sh",
     "clean": "./scripts/run-clean-project.sh",
     "prepare": "husky install",
-    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-no-proxy.sh && npm run test:smoke",
+    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && node scripts/validate-ts-tests.js && ./scripts/build-no-proxy.sh && npm run test:runner:smoke",
     "check-versions": "node scripts/check-versions.js",
     "check-env": "node scripts/initialize-dotenv.js",
     "setup:dotenv": "node scripts/initialize-dotenv.js",
     "setup:test-keys": "node scripts/generate-test-keys.js",
-    "setup:test-env": "./scripts/setup-test-env.sh",
+    "setup:test-env": "node scripts/setup-test-validator.js",
     "setup:all": "npm run setup:dotenv && npm run setup:test-keys && npm run setup:test-env --build",
     "dotenv:push": "npx dotenv-vault push",
     "dotenv:push:test": "npx dotenv-vault push test",
     "dotenv:pull": "npx dotenv-vault pull",
     "dotenv:pull:test": "npx dotenv-vault pull test",
     "verify:signatures": "node scripts/verify-signatures.js",
-    "verify:types": "node scripts/verify-types.js"
+    "verify:types": "node scripts/verify-types.js",
+    "validator:up": "node scripts/setup-test-validator.js",
+    "validator:up:build": "node scripts/setup-test-validator.js --build",
+    "test:runner": "node scripts/run-ts-tests.js",
+    "test:runner:all": "node scripts/run-ts-tests.js all",
+    "test:runner:smoke": "node scripts/run-ts-tests.js smoke",
+    "test:runner:kyc": "node scripts/run-ts-tests.js kyc",
+    "test:runner:mint": "node scripts/run-ts-tests.js mint",
+    "test:runner:freeze": "node scripts/run-ts-tests.js freeze",
+    "test:runner:extensions": "node scripts/run-ts-tests.js extensions",
+    "test:runner:comprehensive": "node scripts/run-ts-tests.js comprehensive",
+    "validate:tests": "node scripts/validate-ts-tests.js",
+    "test:coverage": "nyc --reporter=lcov --reporter=text npm run test",
+    "test:coverage:smoke": "nyc --reporter=lcov --reporter=text npm run test:smoke",
+    "test:coverage:report": "nyc report --reporter=html && open coverage/index.html",
+    "create:test": "node scripts/create-test.js"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
+    "@coral-xyz/anchor": "^0.30.1",
     "@solana/spl-token": "0.3.9",
     "@solana/web3.js": "1.87.6",
+    "dotenv": "^16.0.0",
     "dotenv-vault": "^1.26.2",
-    "rpc-websockets": "^7.5.1",
-    "dotenv": "^16.0.0"
+    "rpc-websockets": "^7.5.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
@@ -51,6 +70,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.3.5"
@@ -65,6 +85,23 @@
     ],
     "*.rs": [
       "cargo fmt --"
+    ]
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "test/**",
+      "tests/fixtures/**",
+      "node_modules/**"
+    ],
+    "all": true,
+    "cache": true,
+    "reporter": [
+      "text",
+      "lcov"
     ]
   }
 }
