refactor: reorganize test structure to be more intuitive

--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check && eslint . --ext .ts",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,ts,json}\"",
-    "test": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" --timeout 120000",
+    "test": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
     "test:ci": "node scripts/run-ts-tests.js -v smoke",
-    "test:unit": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/kyc-oracle.test.ts --timeout 60000",
-    "test:kyc": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/kyc-oracle.test.ts --timeout 60000",
-    "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-mint.test.ts --timeout 60000",
-    "test:all": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" \"tests/unit/**/*.spec.ts\" --timeout 120000",
-    "test:full": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/**/*.ts\" \"tests/unit/**/*.spec.ts\" --timeout 120000",
-    "test:smoke": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/smoke.test.ts --timeout 60000",
-    "test:functional": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/functional/**/*.ts\" --timeout 120000",
-    "test:extension": "npx ts-mocha -p ./tests/tsconfig.json \"tests/new-approach/extensions/**/*.ts\" --timeout 120000",
-    "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/comprehensive.test.ts --timeout 180000",
-    "test:mint": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-mint.test.ts --timeout 60000",
-    "test:freeze": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/freeze-seize.test.ts --timeout 60000",
-    "test:extensions": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/token-extensions.test.ts --timeout 60000",
-    "test:ts": "npx ts-mocha -p ./tests/tsconfig.json tests/new-approach/**/*.ts --timeout 180000",
+    "test:unit": "npx ts-mocha -p ./tests/tsconfig.json \"tests/unit/**/*.ts\" --timeout 60000",
+    "test:integration": "npx ts-mocha -p ./tests/tsconfig.json \"tests/integration/**/*.ts\" --timeout 90000",
+    "test:e2e": "npx ts-mocha -p ./tests/tsconfig.json \"tests/e2e/**/*.ts\" --timeout 120000",
+    "test:kyc": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/kyc-oracle.test.ts --timeout 60000",
+    "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
+    "test:all": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
+    "test:full": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
+    "test:smoke": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/smoke.test.ts --timeout 60000",
+    "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/e2e/comprehensive.test.ts --timeout 180000",
+    "test:mint": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
+    "test:freeze": "npx ts-mocha -p ./tests/tsconfig.json tests/integration/freeze-seize.test.ts --timeout 60000",
+    "test:extensions": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-extensions.test.ts --timeout 60000",
+    "test:ts": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 180000",
     "build": "./scripts/build-no-proxy.sh",
     "clean": "./scripts/run-clean-project.sh",
     "prepare": "husky install",
