--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:all": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
     "test:full": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
     "test:smoke": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/smoke.test.ts --timeout 60000",
+    "test:precommit:smoke": "node scripts/run-smoke-test.js",
     "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/e2e/comprehensive.test.ts --timeout 180000",
     "test:mint": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
     "test:freeze": "npx ts-mocha -p ./tests/tsconfig.json tests/integration/freeze-seize.test.ts --timeout 60000",
@@ -22,7 +23,7 @@
     "build": "./scripts/build-no-proxy.sh",
     "clean": "./scripts/run-clean-project.sh",
     "prepare": "husky install",
-    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && node scripts/validate-ts-tests.js && ./scripts/build-no-proxy.sh && npm run test:runner:smoke",
+    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-no-proxy.sh && npm run test:precommit:smoke",
     "check-versions": "node scripts/check-versions.js",
     "check-env": "node scripts/initialize-dotenv.js",
     "setup:dotenv": "node scripts/initialize-dotenv.js",
