--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check && eslint . --ext .ts",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,ts,json}\"",
-    "test": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
+    "test": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
     "test:ci": "node scripts/run-ts-tests.js -v smoke",
-    "test:unit": "npx ts-mocha -p ./tests/tsconfig.json \"tests/unit/**/*.ts\" --timeout 60000",
-    "test:integration": "npx ts-mocha -p ./tests/tsconfig.json \"tests/integration/**/*.ts\" --timeout 90000",
-    "test:e2e": "npx ts-mocha -p ./tests/tsconfig.json \"tests/e2e/**/*.ts\" --timeout 120000",
-    "test:kyc": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/kyc-oracle.test.ts --timeout 60000",
-    "test:token": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
-    "test:all": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
-    "test:full": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
-    "test:smoke": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/smoke.test.ts --timeout 60000",
+    "test:unit": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/unit/**/*.ts\" --timeout 60000",
+    "test:integration": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/integration/**/*.ts\" --timeout 90000",
+    "test:e2e": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/e2e/**/*.ts\" --timeout 120000",
+    "test:kyc": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/kyc-oracle.test.ts --timeout 60000",
+    "test:token": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
+    "test:all": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
+    "test:full": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
+    "test:smoke": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/smoke.test.ts --timeout 60000",
     "test:precommit:smoke": "node scripts/run-smoke-test.js",
     "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/e2e/comprehensive.test.ts --timeout 180000",
-    "test:mint": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
-    "test:freeze": "npx ts-mocha -p ./tests/tsconfig.json tests/integration/freeze-seize.test.ts --timeout 60000",
-    "test:extensions": "npx ts-mocha -p ./tests/tsconfig.json tests/unit/token-extensions.test.ts --timeout 60000",
-    "test:ts": "npx ts-mocha -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 180000",
-    "build": "./scripts/build-no-proxy.sh",
+    "test:mint": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
+    "test:freeze": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/integration/freeze-seize.test.ts --timeout 60000",
+    "test:extensions": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-extensions.test.ts --timeout 60000",
+    "test:ts": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 180000",
+    "build": "./scripts/build-clean.zsh",
     "clean": "./scripts/run-clean-project.sh",
     "prepare": "husky install",
-    "precommit": "lint-staged && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-no-proxy.sh && npm run test:precommit:smoke",
+    "check:cargo-lock": "node scripts/check-lock-version.js",
+    "precommit": "lint-staged && node scripts/check-lock-version.js && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-clean.zsh && npm run test:precommit:smoke",
     "check-versions": "node scripts/check-versions.js",
     "check-env": "node scripts/initialize-dotenv.js",
     "setup:dotenv": "node scripts/initialize-dotenv.js",
@@ -50,7 +51,8 @@
     "test:coverage": "nyc --reporter=lcov --reporter=text npm run test",
     "test:coverage:smoke": "nyc --reporter=lcov --reporter=text npm run test:smoke",
     "test:coverage:report": "nyc report --reporter=html && open coverage/index.html",
-    "create:test": "node scripts/create-test.js"
+    "create:test": "node scripts/create-test.js",
+    "pretest": "./scripts/build-clean.zsh"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
@@ -63,16 +65,20 @@
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
+    "@types/jest": "^29.5.14",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "chai": "^4.3.4",
     "eslint": "^8.45.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "mocha": "^9.0.3",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
+    "solana-bankrun": "^0.4.0",
+    "ts-jest": "^29.3.2",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.3.5"
   },
