--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ build
 # IDEs and editors
 .idea
 .vscode
+.cursorrules
 *.swp
 *.swo
 *~
@@ -63,3 +64,7 @@ test-keypairs/
 
 # Config files
 .config/
+
+.env*
+.flaskenv*
+!.env.project
