--- a/programs/mica_eur/Cargo.toml
+++ b/programs/mica_eur/Cargo.toml
@@ -6,29 +6,17 @@ edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+name = "mica_eur"
 
 [features]
+default = []
+cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-cpi = ["no-entrypoint"]
-default = []
+idl-build = ["anchor-lang/idl-build"]
 test-sbf = []
 
-# Define centralized versions for easier management
-[workspace.dependencies]
-anchor-lang = "=0.31.1"
-anchor-spl = { version = "=0.31.1", features = ["token_2022"] }
-solana-program = "=1.18.17"
-spl-token-2022 = { version = "=2.0.6", features = ["transfer-hook", "metadata-pointer", "default-account-state"] }
-spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "=2.3.0", features = ["no-entrypoint"] }
-
 [dependencies]
-anchor-lang = { workspace = true }
-anchor-spl = { workspace = true }
-# We use anchor-lang's re-exported solana-program to avoid conflicts
-# solana-program = { workspace = true }
-spl-token-2022 = { workspace = true }
-spl-token = { workspace = true }
-spl-associated-token-account = { workspace = true }
+anchor-lang = "=0.30.1"
+anchor-spl = "=0.30.1"
