Add comprehensive KYC end-to-end flow test and documentation

--- a/package.json
+++ b/package.json
@@ -1,72 +1,51 @@
 {
+  "name": "mica-eur",
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w && eslint . --ext .ts --fix",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check && eslint . --ext .ts",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,ts,json}\"",
-    "test": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
-    "test:ci": "node scripts/run-ts-tests.js -v smoke",
-    "test:unit": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/unit/**/*.ts\" --timeout 60000",
-    "test:integration": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/integration/**/*.ts\" --timeout 90000",
-    "test:e2e": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/e2e/**/*.ts\" --timeout 120000",
-    "test:kyc": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/kyc-oracle.test.ts --timeout 60000",
-    "test:token": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
-    "test:all": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
-    "test:full": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 120000",
-    "test:smoke": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/smoke.test.ts --timeout 60000",
-    "test:precommit:smoke": "node scripts/run-smoke-test.js",
-    "test:comprehensive": "npx ts-mocha -p ./tests/tsconfig.json tests/e2e/comprehensive.test.ts --timeout 180000",
-    "test:mint": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-mint.test.ts --timeout 60000",
-    "test:freeze": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/integration/freeze-seize.test.ts --timeout 60000",
-    "test:extensions": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json tests/unit/token-extensions.test.ts --timeout 60000",
-    "test:ts": "npx ts-mocha -r tests/utils/env-setup.ts -p ./tests/tsconfig.json \"tests/{unit,integration,e2e}/**/*.ts\" --timeout 180000",
-    "build": "./scripts/build-clean.zsh",
-    "clean": "./scripts/run-clean-project.sh",
+    "setup": "./scripts/setup.sh",
+    "setup:rust": "./scripts/setup.sh --rust",
+    "setup:solana": "./scripts/setup.sh --solana",
+    "setup:anchor": "./scripts/setup.sh --anchor",
+    "setup:env": "./scripts/setup.sh --env",
+    "setup:keys": "./scripts/setup.sh --keys",
+    "build": "./scripts/build.sh",
+    "build:skip-bpf": "./scripts/build.sh --skip-bpf",
+    "test": "./scripts/test.sh --all",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:devnet": "./scripts/deploy.sh --network devnet",
+    "deploy:testnet": "./scripts/deploy.sh --network testnet",
+    "deploy:mainnet": "./scripts/deploy.sh --network mainnet",
     "prepare": "husky install",
     "check:cargo-lock": "node scripts/check-lock-version.js",
-    "precommit": "lint-staged && node scripts/check-lock-version.js && node scripts/verify-signatures.js && node scripts/verify-types.js && ./scripts/build-clean.zsh && npm run test:precommit:smoke",
-    "check-versions": "node scripts/check-versions.js",
-    "check-env": "node scripts/initialize-dotenv.js",
-    "setup:dotenv": "node scripts/initialize-dotenv.js",
-    "setup:test-keys": "node scripts/generate-test-keys.js",
-    "setup:test-env": "node scripts/setup-test-validator.js",
-    "setup:all": "npm run setup:dotenv && npm run setup:test-keys && npm run setup:test-env --build",
-    "dotenv:push": "npx dotenv-vault push",
-    "dotenv:push:test": "npx dotenv-vault push test",
-    "dotenv:pull": "npx dotenv-vault pull",
-    "dotenv:pull:test": "npx dotenv-vault pull test",
-    "verify:signatures": "node scripts/verify-signatures.js",
-    "verify:types": "node scripts/verify-types.js",
-    "validator:up": "node scripts/setup-test-validator.js",
-    "validator:up:build": "node scripts/setup-test-validator.js --build",
-    "test:runner": "node scripts/run-ts-tests.js",
-    "test:runner:all": "node scripts/run-ts-tests.js all",
-    "test:runner:smoke": "node scripts/run-ts-tests.js smoke",
-    "test:runner:kyc": "node scripts/run-ts-tests.js kyc",
-    "test:runner:mint": "node scripts/run-ts-tests.js mint",
-    "test:runner:freeze": "node scripts/run-ts-tests.js freeze",
-    "test:runner:extensions": "node scripts/run-ts-tests.js extensions",
-    "test:runner:comprehensive": "node scripts/run-ts-tests.js comprehensive",
-    "validate:tests": "node scripts/validate-ts-tests.js",
-    "test:coverage": "nyc --reporter=lcov --reporter=text npm run test",
-    "test:coverage:smoke": "nyc --reporter=lcov --reporter=text npm run test:smoke",
-    "test:coverage:report": "nyc report --reporter=html && open coverage/index.html",
-    "create:test": "node scripts/create-test.js",
-    "pretest": "./scripts/build-clean.zsh"
+    "precommit": "lint-staged && node scripts/check-lock-version.js && ./scripts/build.sh --skip-bpf && npm run test:functional",
+    "validator": "solana-test-validator --quiet",
+    "clean": "rm -rf target/deploy target/idl .anchor",
+    "test:functional": "./scripts/run-functional-tests.sh",
+    "test:kyc": "./scripts/run-kyc-tests.sh",
+    "test:token": "./scripts/run-token-tests.sh",
+    "test:aml": "./scripts/run-aml-tests.sh",
+    "test:freeze-seize": "./scripts/run-freeze-seize-tests.sh",
+    "test:kyc-flow": "./scripts/run-kyc-end-to-end-test.sh"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
-    "@solana/spl-token": "0.3.9",
-    "@solana/web3.js": "1.87.6",
+    "@coral-xyz/anchor": "^0.31.1",
     "dotenv": "^16.0.0",
     "dotenv-vault": "^1.26.2",
     "rpc-websockets": "^7.5.1"
   },
   "devDependencies": {
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/jest": "^29.5.14",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "chai": "^4.3.4",
@@ -74,13 +53,14 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "litesvm": "^0.2.0",
     "mocha": "^9.0.3",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "solana-bankrun": "^0.4.0",
     "ts-jest": "^29.3.2",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,ts}": [
