--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,36 @@ MINT_AUTHORITY_ADDRESS=mint_authority_wallet_address
 TOKEN_NAME=MiCA EUR
 TOKEN_SYMBOL=MEUR
 TOKEN_METADATA_URL=https://ipfs.example.com/metadata.json
+
+# Onfido KYC API credentials and settings
+ONFIDO_API_TOKEN=api_sandbox.YOUR_ONFIDO_SANDBOX_TOKEN
+ONFIDO_WORKFLOW_ID=your_workflow_id_from_onfido_dashboard 
+ONFIDO_WEBHOOK_TOKEN=your_webhook_token_for_signature_verification
+ONFIDO_WEBHOOK_URL=your_webhook_callback_url
+
+# Solana blockchain settings
+SOLANA_RPC_URL=http://127.0.0.1:8899
+PROGRAM_ID=your_deployed_program_id
+
+# Authority keypairs for on-chain program interactions
+PAYER_KEYPAIR_PATH=path/to/keys/payer.json
+PAYER_PUBKEY=payer_public_key
+MINTAUTHORITY_KEYPAIR_PATH=path/to/keys/mintAuthority.json
+MINTAUTHORITY_PUBKEY=mint_authority_public_key
+FREEZEAUTHORITY_KEYPAIR_PATH=path/to/keys/freezeAuthority.json
+FREEZEAUTHORITY_PUBKEY=freeze_authority_public_key
+TRANSFERFEEAUTHORITY_KEYPAIR_PATH=path/to/keys/transferFeeAuthority.json
+TRANSFERFEEAUTHORITY_PUBKEY=transfer_fee_authority_public_key
+KYCAUTHORITY_KEYPAIR_PATH=path/to/keys/kycAuthority.json
+KYCAUTHORITY_PUBKEY=kyc_authority_public_key
+TREASURYAUTHORITY_KEYPAIR_PATH=path/to/keys/treasuryAuthority.json
+TREASURYAUTHORITY_PUBKEY=treasury_authority_public_key
+GOVERNANCEAUTHORITY_KEYPAIR_PATH=path/to/keys/governanceAuthority.json
+GOVERNANCEAUTHORITY_PUBKEY=governance_authority_public_key
+REGULATORAUTHORITY_KEYPAIR_PATH=path/to/keys/regulatorAuthority.json
+REGULATORAUTHORITY_PUBKEY=regulator_authority_public_key
+CONFIDENTIALTRANSFERMINTAUTHORITY_KEYPAIR_PATH=path/to/keys/confidentialTransferMintAuthority.json
+CONFIDENTIALTRANSFERMINTAUTHORITY_PUBKEY=confidential_transfer_mint_authority_public_key
+
+# API server settings
+PORT=3000
