--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,10 +1,11 @@
 [toolchain]
-anchor_version = "0.31.1"
-solana_version = "2.1.0"
 
 [features]
 resolution = true
 skip-lint = false
+
+[workspace]
+members = ["programs/mica_eur"]
 
 [programs.localnet]
 mica_eur = "9x3tkUkajECAgPvS59YTAdD7VZRMRckrPxFC4MZspup5"
@@ -13,24 +14,11 @@ mica_eur = "9x3tkUkajECAgPvS59YTAdD7VZRMRckrPxFC4MZspup5"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tests/tsconfig.json -t 1000000 tests/**/*.ts"
-test-unit = "yarn run ts-mocha -p ./tests/tsconfig.json -t 1000000 tests/unit/**/*.ts"
-test-kyc = "yarn run ts-mocha -p ./tests/tsconfig.json -t 1000000 tests/unit/kyc_oracle.spec.ts"
-test-token = "yarn run ts-mocha -p ./tests/tsconfig.json -t 1000000 tests/unit/token_mint.spec.ts"
-
-[workspace]
-types = "target/types"
-members = ["programs/*"]
-
-[test]
-startup_wait = 5000
-
-[test.validator]
-url = "https://api.devnet.solana.com"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 --ignore tests/jest/**/*.ts tests/**/*.ts"
 
 [dependencies]
 proc-macro2 = "=1.0.94"
