--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w && eslint . --ext .ts --fix",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check && eslint . --ext .ts",
+    "prepare": "husky install",
+    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,ts,json}\"",
     "build": "anchor build",
-    "build:skip-bpf": "./scripts/no-bpf-build.sh",
+    "build:fast": "./scripts/build.sh --skip-lint",
     "test": "anchor test",
     "test:jest": "jest --config jest.config.js",
     "test:jest:full": "jest --config jest.config.js --testMatch=\"**/tests/jest/mica-eur-full.test.ts\"",
@@ -16,8 +17,13 @@
     "test:jest:script": "./scripts/run-jest-tests.sh",
     "deploy": "anchor deploy",
     "clean": "rm -rf target/deploy target/idl .anchor",
-    "test:functional": "ts-mocha -p ./tsconfig.json -t 1000000 tests/mica-eur-functional-tests.ts",
-    "test:kyc-flow": "ts-mocha -p ./tsconfig.json -t 1000000 tests/kyc-end-to-end-flow.ts"
+    "test:functional": "./scripts/test.sh --functional",
+    "test:kyc-flow": "./scripts/test.sh --functional --grep \"KYC end-to-end\"",
+    "precommit": "npm run lint && npm run build:fast && npm run test:precommit",
+    "test:precommit": "npm run test:jest:litesvm && ./scripts/test.sh --functional --grep \"KYC Oracle|Token Functionality|Freeze/Seize|AML Authority\" && ./scripts/test.sh --functional --test tests/kyc-end-to-end-flow.ts --grep \"verification levels\"",
+    "verify:types": "node scripts/verify-types.js",
+    "verify:signatures": "node scripts/verify-signatures.js",
+    "verify:kyc": "node scripts/verify-kyc-levels.js"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
@@ -26,6 +32,7 @@
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.95.2",
     "@types/bn.js": "^5.1.0",
@@ -33,14 +40,17 @@
     "@types/jest": "^29.5.11",
     "@types/mocha": "^9.0.0",
     "@types/node": "^18.15.0",
-    "@babel/preset-typescript": "^7.24.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "chai": "^4.3.4",
+    "eslint": "^8.57.1",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "litesvm": "^0.2.0",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.1",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.9.5",
-    "litesvm": "^0.2.0"
+    "typescript": "^5.8.3"
   }
 }
