--- a/programs/mica_eur/Cargo.toml
+++ b/programs/mica_eur/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "lib"]
 name = "mica_eur"
+path = "src/lib.rs"
 
 [features]
 default = []
@@ -19,4 +20,5 @@ test-sbf = []
 
 [dependencies]
 anchor-lang = "=0.30.1"
-anchor-spl = "=0.30.1" 
+anchor-spl = "0.30.1"
+borsh = "=0.10.4"
