--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ resolution = true
 skip-lint = false
 
 [workspace]
-members = ["programs/mica_eur"]
+members = ["sources/sol-programs/mica_eur"]
 
 [programs.localnet]
 mica_eur = "9x3tkUkajECAgPvS59YTAdD7VZRMRckrPxFC4MZspup5"
@@ -18,7 +18,7 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 --ignore tests/jest/**/*.ts tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 sources/sol-programs/mica_eur/tests/**/*.ts sources/interface/tests/**/*.ts sources/kyc-api/tests/**/*.ts"
 
 [dependencies]
 proc-macro2 = "=1.0.94"
