--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-    "format": "prettier --write \"**/*.{js,ts,json}\"",
-    "format:check": "prettier --check \"**/*.{js,ts,json}\"",
+    "lint:fix": "prettier --ignore-path .prettierignore */*.js \"*/**/*{.js,.ts}\" -w",
+    "lint": "prettier --ignore-path .prettierignore */*.js \"*/**/*{.js,.ts}\" --check",
+    "format": "prettier --ignore-path .prettierignore --write \"**/*.{js,ts,json}\"",
+    "format:check": "prettier --ignore-path .prettierignore --check \"**/*.{js,ts,json}\"",
     "build": "anchor build",
     "build:fast": "./scripts/build.sh --skip-lint",
+    "build:rust": "anchor build --skip-lint",
     "test": "anchor test",
     "test:jest": "jest --config jest.config.js",
-    "test:jest:full": "jest --config jest.config.js --testMatch=\"**/tests/jest/mica-eur-full.test.ts\"",
-    "test:jest:litesvm": "jest --config jest.config.js --testMatch=\"**/tests/jest/mica-eur-litesvm.test.ts\"",
+    "test:jest:full": "jest --config jest.config.js --testMatch=\"**/sources/interface/tests/mica-eur-full.test.ts\"",
+    "test:jest:litesvm": "jest --config jest.config.js --testMatch=\"**/sources/interface/tests/mica-eur-litesvm.test.ts\"",
     "test:jest:script": "./scripts/run-jest-tests.sh",
     "deploy": "anchor deploy",
     "clean": "rm -rf target/deploy target/idl .anchor",
     "test:functional": "./scripts/test.sh --functional",
     "test:kyc-flow": "./scripts/test.sh --functional --grep \"KYC end-to-end\"",
     "precommit": "npm run lint && npm run build:fast && npm run test:precommit",
-    "test:precommit": "npm run test:jest:litesvm && ./scripts/test.sh --functional --grep \"KYC Oracle|Token Functionality|Freeze/Seize|AML Authority\" && ./scripts/test.sh --functional --test tests/kyc-end-to-end-flow.ts --grep \"verification levels\"",
+    "test:precommit": "npm run test:jest:litesvm && ./scripts/test.sh --functional --grep \"KYC Oracle|Token Functionality|Freeze/Seize|AML Authority\" && ./scripts/test.sh --functional --test sources/kyc-api/tests/e2e.test.ts --grep \"verification levels\"",
     "verify:types": "node scripts/verify-types.js",
+    "verify:rust": "node scripts/verify-rust.js",
     "verify:signatures": "node scripts/verify-signatures.js",
     "verify:kyc": "node scripts/verify-kyc-levels.js"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
+    "@project-serum/anchor": "^0.30.1",
     "bn.js": "^5.2.0",
     "borsh": "^0.7.0",
     "dotenv": "^16.0.0"
