--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,11 +1,16 @@
 max_width = 100
 hard_tabs = false
 tab_spaces = 4
-newline_style = "Auto"
+newline_style = "Unix"
 use_small_heuristics = "Default"
 reorder_imports = true
 reorder_modules = true
 remove_nested_parens = true
 edition = "2021"
 merge_derives = true
-use_field_init_shorthand = true 
+use_field_init_shorthand = true
+imports_layout = "HorizontalVertical"
+imports_granularity = "Module"
+binop_separator = "Front"
+overflow_delimited_expr = true
+unstable_features = false 
