--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "verify:kyc": "node scripts/verify-kyc-levels.js"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.30.1",
+    "@coral-xyz/anchor": "^0.30.1",
     "bn.js": "^5.2.0",
     "borsh": "^0.7.0",
     "dotenv": "^16.0.0"
