--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Use Node.js 24.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 24.x
           cache: 'npm'
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: Install dependencies
         run: npm ci --ignore-scripts
@@ -34,12 +35,10 @@ jobs:
       - name: Install build dependencies
         run: sudo apt-get update && sudo apt-get install -y pkg-config build-essential libssl-dev curl
 
-      - name: Install Solana CLI
-        run: |
-          curl -sSfL https://release.solana.com/v1.18.11/install | sh -s -- -u /usr/local
-          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
-          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          solana --version
+      - name: Setup Solana CLI
+        uses: metaDAOproject/setup-solana@v1.2
+        with:
+          solana-cli-version: '1.18.11'
 
       - name: Install Anchor CLI
         run: |
