--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,26 +26,11 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-
       - name: Install build dependencies
         run: sudo apt-get update && sudo apt-get install -y pkg-config build-essential libssl-dev curl
 
-      - name: Setup Solana CLI
-        uses: metaDAOproject/setup-solana@v1.2
-        with:
-          solana-cli-version: '1.18.11'
-
-      - name: Install Anchor CLI
-        run: |
-          cargo install --git https://github.com/coral-xyz/anchor anchor-cli --tag v0.30.1 --locked
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-          export PATH="$HOME/.cargo/bin:$PATH"
-          anchor --version
+      - name: Setup local environment
+        run: bash scripts/setup.sh --all
 
       - name: Cache Cargo registry
         uses: actions/cache@v4
