--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Use Node.js 24.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: 24.x
           cache: 'npm'
@@ -29,11 +29,16 @@ jobs:
       - name: Install build dependencies
         run: sudo apt-get update && sudo apt-get install -y pkg-config build-essential libssl-dev curl
 
+      - name: Setup Solana CLI
+        uses: metaDAOproject/setup-solana@v1.2
+        with:
+          solana-cli-version: '1.18.17'
+
       - name: Setup local environment
-        run: bash scripts/setup.sh --all
+        run: bash scripts/setup.sh --rust --anchor --env --keys
 
       - name: Cache Cargo registry
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/registry
@@ -41,12 +46,6 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
-
-      - name: Cache Solana install
-        uses: actions/cache@v4
-        with:
-          path: ~/.local/share/solana/install
-          key: ${{ runner.os }}-solana-v1-18-11
 
       - name: Fast build (skip BPF)
         run: npm run build:fast
